--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports:
       - "30002:3000"
     environment:
-      - NODE_ENV=production
+      - OPENAI_API_KEY=
+      - OPENAI_MODEL=
+      - OPENAI_BASE_URL=https://api.openai.com/v1
       - APP_PORT=3000
     restart: unless-stopped
