feat(preview): 添加自动刷新功能并优化预览页面
- 在预览页面添加自动刷新开关，用户可选择是否开启自动刷新
- 新增手动刷新按钮，用于在关闭自动刷新时手动更新预览内容
- 优化了预览页面的 UI 和交互，包括更新提示信息和按钮样式
- 调整了 Vite 配置中的 API 代理地址
- 移除了 ask-ai 组件中未使用的 eslint 注释

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:dev": "concurrently \"npm run dev\" \"npm run start\""
   },
   "dependencies": {
     "@huggingface/hub": "^1.1.1",
