--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
