--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-speech-recognition": "^4.0.0",
     "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -40,6 +41,7 @@
     "@types/react-dom": "^19.0.4",
     "@types/react-speech-recognition": "^3.9.6",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
