--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js",
-    "start:dev": "concurrently \"npm run dev\" \"npm run start\""
+    "start:dev": "concurrently \"npm run dev\" \"npm run start\"",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@huggingface/hub": "^1.1.1",
