--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,10 @@
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "functions": {
+    "server.js": {
+      "maxDuration": 60
+    }
+  }
 } 
