--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "start": "node server.js",
     "start:dev": "concurrently \"npm run dev\" \"npm run start\"",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "netlify-dev": "netlify dev"
   },
   "dependencies": {
     "@huggingface/hub": "^1.1.1",
@@ -32,6 +33,7 @@
     "react-speech-recognition": "^4.0.0",
     "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
+    "serverless-http": "^3.2.0",
     "tailwindcss": "^4.0.15",
     "zustand": "^5.0.3"
   },
@@ -47,6 +49,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "netlify-cli": "^20.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
