--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   functions = "netlify/functions"
 
 [dev]
-  command = "npm run start:dev"
+  command = "npm run start"
   port = 3000
   targetPort = 3000
 
