refactor(netlify): 重构 server.js 以支持 Netlify 部署
- 将 Express 应用程序的初始化和配置移至 Netlify 函数内部
- 添加中间件和路由处理程序以支持 Netlify 服务器功能
- 优化 OpenAI API 调用和流式响应处理
- 增加环境变量配置和错误处理

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,19 @@
   functions = "netlify/functions"
 
 [dev]
-  command = "npm run start"
+  command = "npm run start:dev"
   port = 3000
   targetPort = 3000
+
+[functions]
+  node_bundler = "esbuild"
+  included_files = ["utils/*"]
+  
+# 增加函数超时时间，默认值为10秒，付费计划可使用26秒
+[functions.server]
+  included_files = ["utils/*"]
+  external_node_modules = ["express"]
+  timeout = 26
 
 [[redirects]]
   from = "/api/*"
