--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ APP_PORT=3000
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o
 OPENAI_BASE_URL=https://api.openai.com/v1
+
+# 访问频率限制（0或不设置表示不限制）
+# 每个IP每小时最大请求次数
+IP_RATE_LIMIT=100
